--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,18 @@
   display: none;
 }
 
+#code-container {
+  width: 50%;
+}
+
+#diagram-container {
+  display: none;
+}
+
+#bpmn-container {
+  max-width: 500px;
+}
+
 .playground > * {
   flex: 1;
 }
