--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,12 @@
+body, html {
+  padding: 0;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .playground {
   display: flex;
   height: 800px;
